# nft-terra

./: Cargo.toml  README.md  build.sh  deploy.js  package.json
artifacts/: astrohero.wasm  checksums.txt  whitelist_airdrop.wasm
contracts/astrohero/: Cargo.toml
contracts/astrohero/artifacts/: astrohero.wasm  checksums.txt  checksums_intermediate.txt
contracts/astrohero/examples/: schema.rs
contracts/astrohero/src/: contract.rs  execute.rs  lib.rs  state.rs  test.rs
contracts/whitelist-airdrop/: Cargo.toml  README.md  build.sh
contracts/whitelist-airdrop/examples/: schema.rs
contracts/whitelist-airdrop/helpers/: README.md
contracts/whitelist-airdrop/schema/: config_response.json  execute_msg.json  instantiate_msg.json
contracts/whitelist-airdrop/src/: contract.rs  msg.rs  state.rs
contracts/whitelist-airdrop/testdata/: airdrop_stage_1_list.json  airdrop_stage_1_test_data.json  airdrop_stage_2_list.json
