[package]
name = "whitelist_airdrop"
version = "0.9.3"
authors = ["Test"]
edition = "2018"
description = "Merkle tree for minting NFT"
license = "Apache-2.0"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw0 = { version = "0.9.1" }
cw2 = { version = "0.9.1" }
cw20 = { version = "0.9.1" }
cosmwasm-std = { version = "0.16.0" }
cw721 = {  version = "0.9.2" }
cw721-base = {  version = "0.9.2", features = ["library"] }
cw-storage-plus = { version = "0.9.1" }
schemars = "0.8.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }
astrohero = { path = "../astrohero", version = "0.9.3", features = ["library"] }


[dev-dependencies]
cosmwasm-schema = "0.16.0"
serde_json = "1.0"
